--- a/lesson3/style.css
+++ b/lesson3/style.css
@@ -1,16 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap');
 body{
     background-color: #FAF8F0;
+    margin-bottom: 50px;
 }
 
 h1, h2, h3, p{
     text-align: center;
     color: #2B2D42;
+    font-family: 'Roboto', sans-serif;
+
 }
 
 img {
     display: block;
     margin: 0 auto;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
+}
+
+#persona{
+    margin-top: 150px;
+    margin-bottom: 30px;
+}
+
+#scenarios{
+    margin-top: 50px;
+}
+.subtitle{
+    font-size: 1.5em;
+}
+
+#design{
+    font-size: 1.8em;
+    margin-top: 100px;
 }
 
 #colors {
@@ -36,6 +57,10 @@ img {
     background-color: #BE97C6 ;
 }
 
+#type{
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
 
 
 
@@ -50,3 +75,67 @@ img {
 #A5D9EB blue
 #244964 letter blue
 #C27364 house */
+
+header{
+	background-color: #2B2D42;
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+	justify-content: center;
+	padding: 10px;
+}
+
+nav {
+	background-color: #2B2D42;
+	text-align: center;
+	box-shadow: 0 0 30px #333;
+}
+
+nav {
+	display: flex;
+	flex-direction: column;
+}
+
+nav div {
+	flex: 1 1 auto;
+}
+
+nav a {
+	display: block;
+	color: #fff;
+	text-align: center;
+	padding: 15px;
+	text-decoration: none;
+	font-size: 0.9rem;
+}
+
+nav a:hover {
+	background-color: #708080;
+	color: #A5D9EB;
+}
+
+/***********************************************/
+/** Media Queries for larger views *************/
+/***********************************************/
+
+@media (min-width: 37.5em) {
+	nav {
+		flex-direction: row;
+	}
+	
+	nav a {
+		font-size: 1.1rem;
+	}
+	main {
+		grid-template-columns: 1fr 1fr 1fr;
+	}
+	main picture {
+		display: block;
+	}
+}
+
+@media (min-width: 48em) {
+	nav a {
+		font-size: 1.3rem;
+	}
+}
