--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -41,6 +41,8 @@ a {
     display: none;
     padding: 15px;
     justify-content: left;
+    color: black;
+    text-decoration: none;
 }
 
 .ham    {
@@ -138,17 +140,30 @@ footer{
     padding-bottom: 20px;
 }
 
+footer a{
+    display: block;
+    color: #FAF8F0;
+    padding: 0px;
+    text-align: center;
+    line-height: .8em;
+    font-size: 1em;
+    padding: 10px;
+}
+
 footer img{
     margin-top: 20px;
     width: 150px;
 }
+
 @media screen and (min-width: 650px){
     a:first-child{
         display: none;
     }
 
     a{
-        display: block;
+        display: flex;
+        font-size: 1.4em;
+        padding-top: 30px;
     }
 
     nav{
@@ -214,6 +229,61 @@ footer img{
     }
 }
 
+@media screen and (min-width: 1200px){
+    main {
+        grid-template-columns: 1fr 2fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+
+    #hero {
+        grid-column: 2/3;
+        grid-row: 1/3;
+    }
+
+    #events{
+        grid-column: 1/2;
+        grid-row: 1/2;
+        height: 95%;
+        width: 95%;
+    }
+    
+    #weather{
+        grid-column: 1/2;
+        grid-row: 2/3;
+        height: 95%;
+        width: 95%;
+    }
+    
+    #news-release{
+        grid-column: 2/3;
+        grid-row: 3/4;
+        height: 95%;
+    }
+    
+    #spotlight{
+        grid-column: 3/-1;
+        grid-row: 1/4;
+    }
+    
+    #spot-3{
+        display: block;
+    }
+
+    #spot-1, #spot-2, #spot-3{
+        width: 95%;
+        border: 1px black solid;
+        margin: 0 auto;
+        margin-top: 50px;
+    }
+    
+    #join {
+        display: block;
+        grid-column: 1/2;
+        grid-row: 3/4;
+        width: 95%;
+        height: 95%;
+    }
+}
 
 
 /* Color Pallet */
