--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -113,6 +113,10 @@ a {
     margin: 0 auto;
 }
 
+#events img{
+    display: none;
+}
+
 #events h4, h5, p{
     color: #FAF8F0;
     text-align: center;
@@ -293,7 +297,7 @@ footer img{
     main {
         display: grid;
         grid-template-columns: 2fr 1fr;
-        grid-template-rows: 1.2fr 1fr 2fr 1fr 1fr ;
+        grid-template-rows: 1.2fr 1fr 3fr .5fr 1fr ;
     }
 
     #hero {
@@ -306,6 +310,12 @@ footer img{
         grid-row: 5/6;
         height: 95%;
         width: 92.5%;
+    }
+    
+    #events img{
+        display: block;
+        width: 50%;
+        margin: 0 auto;
     }
     
     #weather{
@@ -331,8 +341,9 @@ footer img{
         border: 1px black solid;
         margin: 0 auto;
         margin-top: 10px;
+        height: auto;
     }
-    
+
     #spot-3{
         display: none;
     }
@@ -346,6 +357,38 @@ footer img{
         margin: 0 auto;
         height: 95%;
     }
+
+    #join-button {
+        background-color: #EF233C;
+        color: #FAF8F0;
+        position: absolute;
+        border-radius: 8px;
+        margin-top: 25px;
+        width: 70%;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        left: 15%;
+        font-size: 1.7em;
+    }
+
+    #join p {
+        margin: 120px;
+    }
+
+    /* footer{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 3fr 1fr 1fr;
+    }
+
+    footer img {
+        grid-column: 1/-1;
+        margin: 0 auto;
+    }
+
+    footer span{
+        grid-row: 4/5;
+    } */
 }
 
 @media screen and (min-width: 1200px){
@@ -357,6 +400,23 @@ footer img{
     #hero {
         grid-column: 2/3;
         grid-row: 1/3;
+        margin-top: 0px;
+    }
+
+    #hero img {
+        width: 100%;
+    }
+
+    #id-button{
+        position: absolute;
+        bottom: 70px;
+        right: 5%;
+        width: 90%;
+        height: 175px;
+        background-color: #EF233C;
+        color: #FAF8F0;
+        border-radius: 10px;
+        font-size: 2em;
     }
 
     #events{
@@ -394,6 +454,17 @@ footer img{
         margin: 0 auto;
         margin-top: 50px;
     }
+
+    #spot-3 h3, h4{
+        color: #FAF8F0;
+    }
+
+    #spot-3 img{
+        width: 65%;
+        display: block;
+        margin: 0 auto;
+    }
+    
     
     #join {
         display: block;
@@ -401,6 +472,24 @@ footer img{
         grid-row: 3/4;
         width: 95%;
         height: 95%;
+    }
+
+    #join p {
+        margin: 20px;
+        margin-top: 125px;
+    }
+
+    #join-button {
+        background-color: #EF233C;
+        color: #FAF8F0;
+        position: absolute;
+        border-radius: 8px;
+        margin-top: 25px;
+        width: 15%;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        left: 6%;
+        font-size: 1.7em;
     }
 }
 
