--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -400,6 +400,10 @@ footer img{
         grid-template-rows: 1fr 1fr 1fr;
     }
 
+    header img{
+        width: 50%;
+    }
+
     #hero {
         grid-column: 2/3;
         grid-row: 1/3;
@@ -460,6 +464,7 @@ footer img{
 
     #spot-3 h3, h4{
         color: #FAF8F0;
+        text-align: center;
     }
 
     #spot-3 img{
