--- a/chamber/styles/join.css
+++ b/chamber/styles/join.css
@@ -1,10 +1,3 @@
-#join-main{
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    width:90%;
-    margin: 0 auto;
-}
-
 label, input, textarea{
     display: block;
     font-size: 1.5em;
@@ -12,6 +5,7 @@ label, input, textarea{
 
 label{
     margin-top: 30px;
+    width: 50%;
 }
 
 input{
@@ -57,7 +51,7 @@ input, textarea{
 
 input[type='submit']{
     height: 80px;
-    width: 75%;
+    width: 100%;
     background-color: white;
     color: #2B2D42;
 }
@@ -65,11 +59,35 @@ input[type='submit']{
 h3{
     grid-column: 2/3;
     text-align: center;
-    grid-row: none;
+}
+
+p{
+    grid-column: 2/3;
+    color: #2B2D42;
+    width: 75%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+@media screen and (min-width: 650px)
+{
+    main { 
+        grid-template-columns: 1fr 2fr;
+        grid-template-rows: none;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+
 }
 
 
-
-p{
-    color: #2B2D42;
+@media screen and (min-width: 1200px)
+{
+    main { 
+        grid-template-columns: 1fr 2fr;
+        grid-template-rows: none;
+        width: 90%;
+        margin: 0 auto;
+    }
 }
