--- a/chamber/styles/discover.css
+++ b/chamber/styles/discover.css
@@ -8,10 +8,17 @@ main{
 
 main img{
     margin-top: 50px;
+    width: 500px;
 }
 
 #days{
     text-align: center;
+}
+
+.pclass{
+    color: #2B2D42;
+    /* padding-top: 5px; */
+    font-size: 1.2em;
 }
 
 @media screen and (min-width: 650px){
