--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -121,7 +121,7 @@ a:hover{
 
 #id-button{
     position: absolute;
-    bottom: 20px;
+    bottom: 100px;
     right: 40px;
     width: 200px;
     height: 50px;
@@ -333,6 +333,11 @@ footer img{
         grid-template-rows: 1.2fr 1fr 3fr .5fr 1fr ;
     }
 
+    header img{
+        width: 100%;
+        max-width: 80px;
+    }
+
     #hero {
         grid-column: 1/-1;
         grid-row: 1/2;
@@ -344,6 +349,12 @@ footer img{
 
     #hero-3{
         display: block;
+    }
+
+    #hero p{
+        background-color: #2B2D42;
+        color: white;
+        border-radius: 5px;
     }
 
     #events{
@@ -362,10 +373,11 @@ footer img{
     #weather{
         grid-column: 2/-1;
         grid-row: 5/6;
-        height: 95%;
+        height: 92.5%;
         width: 85%;
+        padding-bottom: 10px;
     }
-    
+
     #news-release{
         grid-column: 1/-1;
         grid-row: 2/3;
@@ -399,7 +411,12 @@ footer img{
         height: 95%;
     }
 
+    #join-but{
+        display: block;
+    }
+
     #join-button {
+        display: block;
         background-color: #EF233C;
         color: #FAF8F0;
         position: absolute;
@@ -433,13 +450,39 @@ footer img{
 }
 
 @media screen and (min-width: 1200px){
-    main {
+    
+    header{
+        display: grid;
         grid-template-columns: 1fr 2fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+        background-color: #FAF8F0;
+    }
+
+    header, h1, h2{
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+    
+    header h1{
+        font-size: 1.5em;
+        margin-top: 15px;
+        text-align: center;
+    }
+    
+    header h2{
+        font-size: 1em;
+        margin-top: 38px;
+        text-align: center;
     }
 
     header img{
-        width: 50%;
+        background-color: transparent;
+        display: block;
+        margin: 0 auto;
+    }
+    
+    main {
+        grid-template-columns: 1fr 2fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
     }
 
     #hero {
@@ -456,12 +499,16 @@ footer img{
         display: block;
     }
 
+    #hero p{
+        color: black;
+    }
+
     #id-button{
         position: absolute;
-        bottom: 70px;
-        right: 5%;
-        width: 90%;
-        height: 175px;
+        bottom: 10px;
+        right: 4.5%;
+        width: 91%;
+        height: 125px;
         background-color: #EF233C;
         color: #FAF8F0;
         border-radius: 10px;
@@ -478,8 +525,9 @@ footer img{
     #weather{
         grid-column: 1/2;
         grid-row: 2/3;
-        height: 95%;
+        height: 92.5%;
         width: 95%;
+        padding-bottom: 20px;
     }
     
     #news-release{
