--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -3,6 +3,7 @@ body{
     font-family: 'Roboto', sans-serif;
     background-color: #FAF8F0;
     margin: 0;
+    max-width: 1600px;
 }
 
 header{
@@ -109,6 +110,15 @@ a:hover{
     display: none;
     margin: 0 auto;
     border: 1px black solid;
+}
+
+#hero-5{
+    width: 95%;
+    display: none;
+    margin: 0 auto;
+    border: 1px black solid;
+    height: auto;
+    margin-bottom: 25px;
 }
 
 #hero p{
@@ -453,7 +463,7 @@ footer img{
     
     header{
         display: grid;
-        grid-template-columns: 1fr 2fr 1fr;
+        grid-template-columns: .2fr 1fr 1fr;
         background-color: #FAF8F0;
     }
 
@@ -465,21 +475,27 @@ footer img{
     header h1{
         font-size: 1.5em;
         margin-top: 15px;
-        text-align: center;
+        text-align: left;
     }
     
     header h2{
         font-size: 1em;
         margin-top: 38px;
-        text-align: center;
+        text-align: left;
     }
 
     header img{
-        background-color: transparent;
         display: block;
-        margin: 0 auto;
+        margin-left: 30px;
+        margin-top: 5px;
+        grid-column: 1/2;
     }
     
+    nav {
+        grid-row: 1/2;
+        grid-column: 3/4;
+    }
+
     main {
         grid-template-columns: 1fr 2fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
@@ -500,6 +516,7 @@ footer img{
     }
 
     #hero p{
+        background-color: transparent;
         color: black;
     }
 
@@ -574,23 +591,37 @@ footer img{
 
     #join p {
         margin: 20px;
-        margin-top: 125px;
+        margin-top: 25px;
     }
 
     #join-button {
         background-color: #EF233C;
         color: #FAF8F0;
-        position: absolute;
+        position: relative;
         border-radius: 8px;
         margin-top: 25px;
-        width: 15%;
+        grid-column: 1/2;
         padding-top: 20px;
-        padding-bottom: 20px;
-        left: 6%;
         font-size: 1.7em;
     }
 }
 
+@media screen and (min-width: 1400px){
+
+    
+    #hero-4{
+        display: none;
+    }
+
+    #hero-5{
+        display: block;
+    }
+
+    #id-button{
+    display: none;
+    }
+
+}
 
 /* Color Pallet */
 /* #A5D9EB blue
