lots of fixes to home and the footer

--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -2,7 +2,7 @@
 body{
     font-family: 'Roboto', sans-serif;
     background-color: #FAF8F0;
-    margin: 0;
+    margin: 0 auto;
     max-width: 1600px;
 }
 
@@ -70,6 +70,8 @@ a:hover{
 #banner {
     background-color: #EF233C;
     display: none;
+    width: 99%;
+    margin: 0 auto;
 }
 
 #banner h3{
@@ -106,18 +108,19 @@ a:hover{
 
 #hero-4{
     width: 90%;
-    height: 700px;
+    max-height: 700px;
     display: none;
     margin: 0 auto;
     border: 1px black solid;
+    margin-bottom: 12px;
 }
 
 #hero-5{
     width: 95%;
+    height: 750px;
     display: none;
     margin: 0 auto;
     border: 1px black solid;
-    height: auto;
     margin-bottom: 25px;
 }
 
@@ -159,7 +162,6 @@ a:hover{
 }
 
 #events h4{
-    padding-top: 10px;
     font-size: 1.7em;
     margin-bottom: 5px;
 }
@@ -187,8 +189,9 @@ a:hover{
 #weather h3{
     text-align: center;
     font-size: 2em;
-    padding-top: 10px;
+    margin-top: 10px;
     margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 
 #weather h4{
@@ -201,7 +204,7 @@ a:hover{
 #weather_icon{
     display: block;
     margin: 0 auto;
-    width: 50%;
+    width: 20%;
 }
 
 #news-release{
@@ -290,14 +293,6 @@ a:hover{
     display: none;
 }
 
-/* #join{
-    background-color: #A5D9EB;
-    height: 200px;
-    width: 95%;
-    margin: 0 auto;
-    padding-bottom: 10px;
-} */
-
 footer{
     background-color: #2B2D42;
     color: #FAF8F0;
@@ -322,7 +317,7 @@ footer img{
 }
 
 @media screen and (min-width: 650px){
-    a:first-child{
+    .ham{
         display: none;
     }
 
@@ -443,20 +438,33 @@ footer img{
         margin: 120px;
     }
 
-    /* footer{
+    footer{
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 3fr 1fr 1fr;
+        grid-template-columns: 3fr 1fr;
+        grid-template-rows: 1fr;
     }
 
     footer img {
-        grid-column: 1/-1;
+        grid-column: -2/-1;
+        grid-row: 1/-1;
         margin: 0 auto;
+        margin-top: 20px;
+        width: 150px;
     }
 
+    #footer-content{
+        display:flexbox
+    }
+
+    #footer-content:first-child a{
+        display:flexbox
+    }
+
+
     footer span{
-        grid-row: 4/5;
-    } */
+        grid-column: 2/3;
+        grid-row: 1/-1;
+    }
 }
 
 @media screen and (min-width: 1200px){
@@ -494,6 +502,7 @@ footer img{
     nav {
         grid-row: 1/2;
         grid-column: 3/4;
+        justify-content: right;
     }
 
     main {
@@ -522,14 +531,14 @@ footer img{
 
     #id-button{
         position: absolute;
-        bottom: 10px;
-        right: 4.5%;
-        width: 91%;
-        height: 125px;
+        bottom: 40px;
+        right: 10%;
+        width: 25%;
+        height: 50px;
         background-color: #EF233C;
         color: #FAF8F0;
-        border-radius: 10px;
-        font-size: 2em;
+        border-radius: 5px;
+        font-size: 1.5em;
     }
 
     #events{
@@ -544,7 +553,7 @@ footer img{
         grid-row: 2/3;
         height: 92.5%;
         width: 95%;
-        padding-bottom: 20px;
+        padding-bottom: 15px;
     }
     
     #news-release{
@@ -566,7 +575,11 @@ footer img{
         width: 95%;
         border: 1px black solid;
         margin: 0 auto;
-        margin-top: 50px;
+        margin-top: 30px;
+    }
+
+    #spot-1{
+        margin-top: 0px;
     }
 
     #spot-3 h3, h4{
@@ -617,8 +630,13 @@ footer img{
         display: block;
     }
 
-    #id-button{
+    /* #id-button{
     display: none;
+    } */
+
+    #hero p{
+        background-color: transparent;
+        color: #FAF8F0;
     }
 
 }
