--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -316,6 +316,10 @@ footer img{
     width: 150px;
 }
 
+#logo-2{
+    display: none;
+}
+
 @media screen and (min-width: 650px){
     .ham{
         display: none;
@@ -616,6 +620,38 @@ footer img{
         grid-column: 1/2;
         padding-top: 20px;
         font-size: 1.7em;
+    }
+
+    footer{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
+
+    footer img {
+        grid-column: -2/-1;
+        grid-row: 1/-1;
+        width: 150px;
+    }
+
+    #footer-content{
+        display:flexbox;
+        /* margin-right: 20px; */
+        grid-column: 2/3;
+    }
+
+    #footer-content:first-child a{
+        display:flexbox
+    }
+
+    footer span{
+        grid-column: 2/3;
+        grid-row: 1/-1;
+    }
+
+    #logo-2{
+        display: block;
+        grid-column: 1/2;
     }
 }
 
