--- a/chamber/styles/dir.css
+++ b/chamber/styles/dir.css
@@ -10,6 +10,10 @@
     margin: 50px;
 }
 
+#head-h1, #head-h2{
+    text-align: left;
+}
+
 h1, h2 {
     text-align: center;
     color:navy;
@@ -46,6 +50,10 @@ td{
     padding: 5px;
     display: table-cell;
     /* display: block; media query use table cell */
+}
+
+tr{
+    text-align: center;
 }
 
 tr:nth-of-type(even){
