--- a/bountiful/styles/main.css
+++ b/bountiful/styles/main.css
@@ -19,8 +19,17 @@ body{
     margin: 0;
 }
 
+#ham-icon{
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    text-decoration: none;
+    color: black;
+}
+
 nav{
     display: flex;
+    /* flex-direction: column; */
     font-size: 1.5em;
     justify-content: center;
     width: 50%;
@@ -56,29 +65,93 @@ h3{
     position: relative;
 }
 
+.smoothies{
+    display: none;
+}
+
 #hero-img{
     display: block;
     margin: 0 auto;
     width: 100%;
-    max-width: 800px;
+    grid-column: 2/3;
+    grid-row: 1/-1;
 }
 
 #hero-button{
-    position: absolute;
-    left: 36%;
-    bottom: 20px;
-    width: 20%;
-    min-width: 250px;
+    display: block;
+    width: 60%;
+    min-width: 265px;
+    margin: 0 auto;
+    margin-top: 10px;
     padding: 20px;
-    background-color: #EDAFB8;
+    background-color: #88CA5E;
     border: #242722 solid 1px;
     border-radius: 5px;
-    font-size: 1.3em;
+    font-size: 1.5em;
     color: #242722;
 }
 
 #hero-button:hover{
     color: #7E6551;
+}
+
+#weather{
+    width: 10%;
+    padding: 20px;
+    background-color: #EDAFB8;
+}
+
+@media screen and (min-width: 650px){
+    
+    #ham-icon{
+        display: none;
+    }
+    
+    #hero-button{
+        position: absolute;
+        right: 1%;
+        bottom: 20px;
+        width: 60%;
+        padding: 30px;
+    }
+}
+
+@media screen and (min-width: 1000px){
+
+    #hero{
+        display: grid;
+        grid-template-columns: 1fr 3fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+    
+    .smoothies{
+        display: block;
+        margin: 0 auto;
+        width: 55%;
+        margin-top: 20px;
+        margin-bottom: 10px;
+    }
+    
+    .smoothies:hover{
+       transform: scale(1.2);
+       transition: .2s;
+    }
+
+    #hero-img{
+        width: 100%;
+        grid-column: 2/3;
+        grid-row: 1/-1;
+        /* max-width: 1100px; */
+    }
+
+    #hero-button{
+        right: 21%;
+        bottom: 20px;
+        width: 25%;
+        padding: 20px;
+        font-size: 1.5em;
+    }
+
 }
 
 /*nav img{
