--- a/bountiful/styles/main.css
+++ b/bountiful/styles/main.css
@@ -8,6 +8,8 @@
 
 body{
     background-color:white;
+    max-width: 1600px;
+    margin: 0 auto;
 }
 
 #logo-img{
@@ -95,30 +97,43 @@ header h3{
     color: #7E6551;
 }
 
+#cali h1, p{
+    text-align: center;
+    color: #242722;
+}
+
+#cali p{
+    margin: 30px;
+}
+
 #weather{
     display: flex;
+    flex-direction: column;
     background-color: #88CA5E;
 }
 
 #weather h2{
     text-align: center;
     margin: 0 auto;
+    margin-top: 10px;
     flex-wrap: wrap;
+    color: #242722;
 }
 
 #weather-0, #weather-1, #weather-2{
-    width: 30%;
-    margin: 20px;
+    width: 80%;
+    margin: 20px auto;
     background-color: #EDAFB8;
     border: 1px solid #242722;
 }
 
 #weather h3, p, span{
     text-align: center;
+    color: #242722;
 }
 
 #weather img{
-    width: 50%;
+    width: 40%;
     display: block;
     margin: 0 auto;
 }
@@ -136,14 +151,33 @@ header h3{
         width: 60%;
         padding: 30px;
     }
+
+    #weather{
+        flex-direction: row;
+    }
+
+    #weather-0, #weather-1, #weather-2{
+        width: 30%;
+    }    
+
+    #weather h2{
+        display: none;
+    }
 }
 
 @media screen and (min-width: 1000px){
 
+    /* main{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    } */
+    
     #hero{
+        /* grid-column: 1/-1; */
         display: grid;
         grid-template-columns: 1fr 3fr 1fr;
         grid-template-rows: 1fr 1fr;
+        margin-bottom: 30px;
     }
     
     .smoothies{
@@ -172,6 +206,28 @@ header h3{
         width: 25%;
         padding: 20px;
         font-size: 1.5em;
+    }
+
+    #cali p{
+        margin: 30px 120px;
+    }
+
+    #weather{
+        flex-direction: row;
+        height: 70%;
+        background-color: white;
+    }
+
+    #weather-0, #weather-1, #weather-2{
+        width: 30%;
+    }   
+    
+    #weather h3{
+        font-size: 1.5em;
+    }
+
+    #weather p{
+        margin: 8px;
     }
 
 }
