--- a/bountiful/styles/main.css
+++ b/bountiful/styles/main.css
@@ -22,20 +22,57 @@ body{
 }
 
 #ham-icon{
-    position: absolute;
+    position: fixed;
     right: 20px;
     top: 10px;
     text-decoration: none;
     color: black;
+    z-index: 3;
+    font-size: 2em;
+}
+
+/* #ham-icon.open{
+    transform: translateX(-40%);
+} */
+
+#mobile-menu{
+    display: none;
+}
+
+#mobile-menu a{
+    color: black;
+    text-decoration: none;
+    padding: 20px;
+    margin: 5px;
+    font-size: 2em;
+    background-color: #EDAFB8;
+    border: #242722 solid 1px;
+}
+
+#mobile-menu #nearest-store{
+    display: flex;
+}
+
+#mobile-menu.open{
+    display: flex;
+    flex-direction: column;
+    background-color: lightblue;
+    position: fixed;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    color: #88CA5E;
+    z-index: 2;
+    padding-top: 80px;
+}
+
+header{
+    height: 60px;
 }
 
 nav{
-    display: flex;
+    display: none;
     /* flex-direction: column; */
-    font-size: 1.5em;
-    justify-content: center;
-    width: 50%;
-    margin: 0 auto;
 }
 
 nav a{
@@ -49,8 +86,7 @@ nav a:hover{
 }
 
 #nearest-store{
-    text-decoration: none;
-    color: #242722;
+    display: none;
 }
 
 header h3{
@@ -144,6 +180,20 @@ header h3{
         display: none;
     }
     
+    nav{
+        display: flex;
+        font-size: 1.5em;
+        justify-content: center;
+        width: 50%;
+        margin: 0 auto;
+    }
+
+    #nearest-store{
+        display: block;
+        text-decoration: none;
+        color: #242722;
+    }
+
     #hero-button{
         position: absolute;
         right: 1%;
