--- a/bountiful/styles/fresh.css
+++ b/bountiful/styles/fresh.css
@@ -1,11 +1,21 @@
+main {
+    background-color: #EDAFB8;
+    width: 100%;
+    padding: 20px 0px;
+    /* background-image: url("../images/form-back.jpg");
+    background-size: 50%;
+    background-repeat: no-repeat; */
+}
+
 label, input, textarea{
     display: block;
     font-size: 1.2em;
+    margin-left: 5px;
 }
 
 label{
-    margin-top: 30px;
-    width: 50%;
+    padding-top: 20px;
+    width: 100%;
 }
 
 input{
@@ -18,23 +28,39 @@ input[type='radio']{
 
 form {
     display: block;
+    /* width: 50%; */
+    min-width: 400px;
+    max-width: fit-content;
+    background-color: #88CA5E;
+    /* box-shadow: 10px 10px black; */
+    margin: 0 auto;
+    padding-bottom: 10px;
+    border: solid 2px black;
+    border-radius: 20px;
 }
 
-form input:required{
+/* form input:required{
     border-left: solid red 6px;
 }
 
 form input:required:valid{
     border-left: solid green 6px;
-}
+} */
 
 #radio {
     display: grid;
-    grid-template-columns: 110px 30px;
+    /* grid-template-columns: 2fr 1fr; */
+    grid-template-columns: 130px 40px;
 }
 
-#radio label {
+/* #radio label {
+    margin: 0 auto;
+} */
+
+#radio input {
+    height: 20px;
     margin: 0;
+    margin-top: 20px;
 }
 
 textarea {
@@ -43,20 +69,23 @@ textarea {
 
 input, textarea{
     margin-bottom: 20px;
-    width: 100%;
-    max-width: 500px;
+    width: 90%;
+    /* max-width: 450px; */
 }
 
 input[type='submit']{
-    height: 80px;
-    width: 100%;
+    height: 70px;
+    width: 90%;
+    margin: 0 auto;
     background-color: white;
     color: #242722;
+    border-radius: 10px;
 }
 
 #info{
     display: none;
     grid-template-columns: 1fr 1fr;
+    background-color: white;
 }
 
 #info h3{
@@ -80,7 +109,7 @@ input[type='submit']{
     main { 
         grid-template-columns: 1fr 2fr;
         grid-template-rows: none;
-        width: 90%;
+        width: 100%;
         margin: 0 auto;
     }
 
@@ -93,7 +122,7 @@ input[type='submit']{
     main { 
         grid-template-columns: 1fr 2fr;
         grid-template-rows: none;
-        width: 90%;
+        width: 100%;
         margin: 0 auto;
     }
 }
