fixed a million things

--- a/bountiful/styles/main.css
+++ b/bountiful/styles/main.css
@@ -133,6 +133,12 @@ header h3{
     color: #7E6551;
 }
 
+#mixed h3{
+    text-align: center;
+    /* padding-right: 50px; */
+    background-color: #88CA5E;
+}
+
 #cali h1, p{
     text-align: center;
     color: #242722;
@@ -172,6 +178,34 @@ header h3{
     width: 40%;
     display: block;
     margin: 0 auto;
+}
+
+footer{
+    display: flex;
+    margin: 0 auto;
+    background-color: #88CA5E;
+    padding: 10px;
+    justify-items: center;
+}
+
+footer p{
+    margin: 0 auto;
+    font-size: 1.3em;
+    padding: 0px 10px;
+}
+
+footer span{
+    font-size: 1.3em;
+}
+
+footer a{
+    text-decoration: none;
+    width: 50px;
+    padding: 0px 10px;
+}
+
+footer img{
+    width: 50px;
 }
 
 @media screen and (min-width: 650px){
