--- a/bountiful/styles/main.css
+++ b/bountiful/styles/main.css
@@ -190,17 +190,19 @@ footer{
 
 footer p{
     margin: 0 auto;
+    margin-top: 15px;
     font-size: 1.3em;
     padding: 0px 10px;
 }
 
 footer span{
     font-size: 1.3em;
+    margin-top: 15px;
 }
 
 footer a{
     text-decoration: none;
-    width: 50px;
+    width: 45px;
     padding: 0px 10px;
 }
 
